Update 'rhnd64kit-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:ed5288f264c4d7879cfd95311abbc90e71c3d957@sha256:d352902ae86392a5d7350811a281fad830be1de1af89d03099fc10bbdb5f4089

--- a/components/rhnd64kit-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/rhnd64kit-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rhnd64kit-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:ed5288f264c4d7879cfd95311abbc90e71c3d957@sha256:d352902ae86392a5d7350811a281fad830be1de1af89d03099fc10bbdb5f4089
+          name: container-image
